--- a/components/skeleton/family/calendar/calendar-skeleton.module.scss
+++ b/components/skeleton/family/calendar/calendar-skeleton.module.scss
@@ -1,3 +1,5 @@
+@import '../../skeleton-animation.module.scss';
+
 .container {
   width: 312px;
   height: 72px;
@@ -15,7 +17,7 @@
       width: 34px;
       height: 34px;
       border-radius: 10px;
-      background-color: var(--skeleton-color);
+      @include skeleton-animation;
     }
     .content {
       display: flex;
@@ -25,13 +27,13 @@
         width: 104px;
         height: 18px;
         border-radius: 10px;
-        background-color: var(--skeleton-color);
+        @include skeleton-animation;
       }
       .profile {
         width: 124px;
         height: 20px;
         border-radius: 10px;
-        background-color: var(--skeleton-color);
+        @include skeleton-animation;
       }
     }
   }
