--- a/components/skeleton/family/diary/diary-skeleton.module.scss
+++ b/components/skeleton/family/diary/diary-skeleton.module.scss
@@ -1,3 +1,5 @@
+@import '../../skeleton-animation.module.scss';
+
 .container {
   padding: 14px 17px;
   width: 242px;
@@ -14,13 +16,13 @@
     .profile {
       width: 20px;
       height: 20px;
-      background-color: var(--skeleton-color);
+      @include skeleton-animation;
       border-radius: 100%;
     }
     .name {
       width: 38px;
       height: 17px;
-      background-color: var(--skeleton-color);
+      @include skeleton-animation;
       border-radius: 10px;
     }
   }
@@ -31,7 +33,7 @@
     .text {
       width: 208px;
       height: 15px;
-      background-color: var(--skeleton-color);
+      @include skeleton-animation;
       border-radius: 10px;
     }
   }
