--- a/components/skeleton/family/growth/growth-skeleton.module.scss
+++ b/components/skeleton/family/growth/growth-skeleton.module.scss
@@ -1,3 +1,5 @@
+@import '../../skeleton-animation.module.scss';
+
 .container {
   width: 74px;
   height: 115px;
@@ -7,8 +9,8 @@
   flex-direction: column;
   align-items: center;
   gap: 6px;
-  background-color: var(--skeleton-color);
-  //   border: 1px solid var(--main-color);
+  @include skeleton-animation;
+
   .category {
     width: 34px;
     height: 34px;
