--- a/components/diaries/diary-images/diary-images.module.scss
+++ b/components/diaries/diary-images/diary-images.module.scss
@@ -1,11 +1,10 @@
 .imagesContainer {
-  margin: 16px 0;
+  margin: 16px 0 6px;
   width: 100%;
   height: 300px;
   overflow-x: scroll;
   scrollbar-width: none;
   display: flex;
-  flex-wrap: none;
   scroll-snap-type: x mandatory;
 }
 
@@ -19,4 +18,24 @@
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.imageDots {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 8px;
+}
+
+.imageDot {
+  border-radius: 9999px;
+  width: 4px;
+  height: 4px;
+  background-color: var(--todo-category);
+  margin: 0 2px;
+}
+
+.imageDot.selected {
+  background-color: var(--main-color);
 }
