--- a/components/spinner/spinner.module.scss
+++ b/components/spinner/spinner.module.scss
@@ -1,9 +1,18 @@
-.spinner {
+.box {
   position: absolute;
   top: 0;
   display: flex;
   width: 100%;
-  height: 100px;
+  height: 120px;
   justify-content: center;
   align-items: flex-end;
+  svg {
+    animation: spinner-ani 1s ease-in-out infinite;
+  }
+}
+
+@keyframes spinner-ani {
+  100% {
+    transform: rotate(360deg);
+  }
 }
