--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,17 +21,23 @@ button {
   font: inherit;
   color: inherit;
   cursor: pointer;
-  /* outline: none; */
   box-shadow: none;
+}
+
+html,
+body {
+  overflow-y: hidden;
 }
 
 #__container {
   max-width: var(--global-width);
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   margin: 0 auto;
   border: 1px solid #ddd;
   border-top: none;
   border-bottom: none;
   position: relative;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
